# fractional

./: .gitignore  .gitmodules  CMakeLists.txt
fractional/: CMakeLists.txt  bench.cpp  fractional.cpp  fractional.h  test.cpp
